<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/as"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/ass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/wd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/wz"
                    android:textColor="#fafafa"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/sd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wz"
                    android:textColor="#fafafa"
                    android:textSize="25sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/sb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wz"
                android:textColor="#fafafa"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ddlj"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/cc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w"
            android:textColor="#fafafafa"
            android:textSize="40sp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:visibility="gone"
        app:layout_anchor="@id/as"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@android:drawable/stat_sys_upload" />

    <LinearLayout
        android:id="@+id/iplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_bar_height"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp">

        <com.yjkz.EditTextS
            android:id="@+id/iped"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/idqa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/kzlb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_bar_height"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="0dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/z"
            android:textSize="19sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_marginEnd="50dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wl" />

                <TextView
                    android:id="@+id/wltext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wz"
                    android:textSize="23sp" />

                <com.yjkz.EditTextS
                    android:id="@+id/wled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxEms="5"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wh" />

                <TextView
                    android:id="@+id/whtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wz"
                    android:textSize="23sp" />

                <com.yjkz.EditTextS
                    android:id="@+id/whed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxEms="5"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_marginEnd="50dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sl" />

                <TextView
                    android:id="@+id/sltext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wz"
                    android:textSize="23sp" />

                <com.yjkz.EditTextS
                    android:id="@+id/sled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxEms="5"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sh" />

                <TextView
                    android:id="@+id/shtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wz"
                    android:textSize="23sp" />

                <com.yjkz.EditTextS
                    android:id="@+id/shed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxEms="5"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="125dp"
                android:layout_height="70dp"
                android:layout_marginEnd="50dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jr" />

                <TextView
                    android:id="@+id/gpiotext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wz"
                    android:textSize="23sp" />

                <com.yjkz.EditTextS
                    android:id="@+id/gpioed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxEms="5"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stratt" />

                <TextView
                    android:id="@+id/eltext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wz"
                    android:textSize="23sp" />

                <com.yjkz.EditTextS
                    android:id="@+id/eled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxEms="5"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>